--- a/ShockToothV2/ShockToothV2/ShockToothV2.vcxproj.filters
+++ b/ShockToothV2/ShockToothV2/ShockToothV2.vcxproj.filters
@@ -22,7 +22,7 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Inf Include="ShockToothV1.inf">
+    <Inf Include="ShockToothV2.inf">
       <Filter>Driver Files</Filter>
     </Inf>
   </ItemGroup>
@@ -33,22 +33,16 @@
     <ClInclude Include="Driver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Public.h">
+    <ClInclude Include="Trace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Trace.h">
+    <ClInclude Include="DS3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Bluetooth.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="HCI.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="L2CAP.h">
+    <ClInclude Include="Endpoints.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -60,12 +54,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Queue.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Structs.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Bluetooth.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
