--- a/ShockToothV2/ShockToothV2/ShockToothV2.vcxproj
+++ b/ShockToothV2/ShockToothV2/ShockToothV2.vcxproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <ClCompile Include="Device.c" />
     <ClCompile Include="Driver.c" />
+    <ClCompile Include="HCI.c" />
     <ClCompile Include="Queue.c" />
   </ItemGroup>
   <ItemGroup>
