--- a/ShockToothV2/ShockToothV2/ShockToothV2.vcxproj.filters
+++ b/ShockToothV2/ShockToothV2/ShockToothV2.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClCompile Include="Queue.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HCI.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
